# Athene

./: .mise.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  SETUP.md  agent-orchestrator.yaml.example  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
.changeset/: config.json  fix-athene-cli-dep.md  fix-global-install-package-names.md  fix-workspace-publish.md  orchestrator-management-release.md  orchestrator-subagent-blocker-hook.md  rename-ao-env-prefix-to-athene.md  test-auto-merge.md  test-direct-merge.md
.cursor/: BUGBOT.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: canary.yml  ci.yml  coverage.yml  integration-tests.yml  release-native-app.yml  release.yml  security.yml  version-bump-ci.yml
Formula/: athene-app.rb
artifacts/: architecture-design.md  competitive-research.md
athene/: Cargo.toml
athene/crates/athene-app/: Cargo.toml
athene/crates/athene-app/src/: app.rs  main.rs  theme.rs
athene/crates/athene-app/src/components/: filter_bar.rs  fleet_board.rs  info_panel.rs  inspector_panel.rs  mod.rs  notification_panel.rs  pr_list.rs  session_detail.rs  sidebar.rs  spawn_modal.rs  terminal.rs
athene/crates/athene-core/: Cargo.toml
athene/crates/athene-core/src/: brain.rs  config.rs  events.rs  github.rs  hooks.rs  lib.rs  lifecycle.rs  pty.rs  store.rs  tmux.rs  types.rs
athene/crates/athene-core/src/lifecycle/: enrichment.rs  mod.rs  poller.rs  probe.rs  reactions.rs
athene/crates/athene-server/: Cargo.toml
athene/crates/athene-server/src/: lib.rs  server.rs
athene/crates/athene-server/src/routes/: brain.rs  events.rs  mod.rs  orchestrators.rs  sessions.rs  terminal.rs
athene/docs/: BRAIN.md
athene/docs/superpowers/plans/: 2026-07-01-ambient-mode.md
athene/docs/superpowers/specs/: 2026-07-01-ambient-mode-design.md
changelog/: hash-based-architecture-migration.md
docs/: ARCHITECTURE.md  CLI.md  CROSS_PLATFORM.md  DEVELOPMENT.md  PLUGIN_PROTOCOL.md  PLUGIN_SPEC.md  dev-flow.md  native-app-features.md  observability.md  openclaw-plugin-setup.md  opencode-workflows-spec.md  owl.md
docs/design/: design-brief-v1.md  design-brief.md  feedback-routing-and-followup-design.md  orchestrator-terminal-design-brief.md  session-detail-design-brief.md
docs/specs/: project-based-dashboard-architecture.md
docs/superpowers/plans/: 2026-06-16-meta-orchestrator-create-from-ui.md  2026-06-16-meta-orchestrator.md  2026-06-24-collapse-orchestrator-tiers.md  2026-06-24-fleet-kanban.md  2026-06-24-orchestrator-management.md  2026-06-25-go-engine-migration.md  2026-06-28-native-app.md  2026-07-01-native-app-feature-parity.md
docs/superpowers/specs/: 2026-06-15-rebrand-slievr-athene-design.md  2026-06-16-meta-orchestrator-create-from-ui-design.md  2026-06-24-fleet-kanban-design.md  (+4 more)
engine/: Makefile  go.mod  go.sum
examples/: README.md  auto-merge.yaml  codex-integration.yaml  linear-team.yaml  multi-project.yaml  simple-github.yaml
handoff/pr-1466/: main.md  review-and-risks.md
openclaw-plugin/: index.ts  openclaw.plugin.json  package.json
schema/: config.schema.json
scripts/: check-publishable-deps.mjs  claude-ao-session  claude-batch-spawn  claude-bugbot-fix  claude-dashboard  claude-integrator-session  configure-trusted-publishers.sh  demo-pr-1466.sh  install-native-app.sh  publish.mjs  qa-setup-test-repo.sh  qa-switch-branch.sh  setup.sh  try-pr.sh
skills/: README.md
skills/agent-orchestrator/: SKILL.md
skills/bug-triage/: SKILL.md
skills/spawn-worker/: SKILL.md
tests/integration/: onboarding-test.sh  run-test.sh
website/: package.json
(+46 files in other folders)
