[package]
name    = "athene-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "athene-app"
path = "src/main.rs"

[dependencies]
athene-core   = { path = "../athene-core" }
athene-server = { path = "../athene-server" }
tokio         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util    = { workspace = true }
clap          = { version = "4", features = ["derive"] }
dirs          = { workspace = true }
serde_json    = { workspace = true }
iced = { version = "0.13", features = ["tokio", "canvas", "advanced", "wgpu"] }
notify-rust = "4"
alacritty_terminal = "0.26"
async-stream = "0.3.6"
arboard = "3"
libc          = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
