[package]
name    = "athene-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
rusqlite   = { workspace = true }
anyhow     = { workspace = true }
toml       = { workspace = true }
dirs       = { workspace = true }
tracing    = { workspace = true }
tokio-util = { workspace = true }
libc       = { workspace = true }
reqwest    = { workspace = true }
walkdir    = { workspace = true }

[dev-dependencies]
tempfile   = "3"
tokio-test = "0.4"
